--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -46,9 +46,21 @@
                             <input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
                         <li class="list-group-item bg-dark">
-                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                            <label for="city">Enter City</label>
+                            <input type="text" placeholder="city name" id="city" />
                         </li>
-
+                        <li class="list-group-item bg-dark">
+                            <label for="state">Enter State</label>
+                            <input type="text" placeholder="ca" id="state" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="country">Enter Country</label>
+                            <input type="text" placeholder="us" id="country" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="shape">Enter Shape</label>
+                            <input type="text" placeholder="triangle" id="shape" />
+                        </li>
                     </ul>
                 </div>
 
